# aura-runtime

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PROGRESS.md  README.md  tools.toml
aura-agent/: Cargo.toml
aura-agent-fileops/: Cargo.toml
aura-agent-fileops/src/: apply.rs  error_context.rs  lib.rs  source_parser.rs  stub_detection.rs  task_keywords.rs  task_relevance.rs  type_resolution.rs  validation.rs  workspace_map.rs
aura-agent-verify/: Cargo.toml
aura-agent-verify/src/: build.rs  common.rs  error_types.rs  lib.rs  test.rs  utils.rs
aura-agent/src/: agent_loop.rs  agent_runner.rs  budget.rs  build.rs  compaction.rs  constants.rs  event_sequence_tests.rs  events.rs  helpers.rs  kernel_executor.rs  lib.rs  message_conversion.rs  policy.rs  read_guard.rs  sanitize.rs  self_review.rs  task_context.rs  task_executor.rs  types.rs
aura-agent/src/agent_loop/: context.rs  mod.rs  tests.rs  tests_advanced.rs  tool_execution.rs
aura-agent/src/blocking/: detection.rs  mod.rs  stall.rs
aura-agent/src/file_ops/: file_walkers.rs
aura-agent/src/prompts/: context.rs  fix.rs  mod.rs  system.rs  turn_kernel_system.rs
aura-agent/src/verify/: build.rs  common.rs  error_types.rs  mod.rs  runner.rs  signatures.rs  test.rs  utils.rs
aura-auth/: Cargo.toml
aura-auth/src/: credentials.rs  error.rs  lib.rs  zos_client.rs
aura-automaton/: Cargo.toml
aura-automaton/src/: events.rs  schedule.rs
aura-automaton/src/builtins/: chat.rs  dev_loop.rs  spec_gen.rs  task_run.rs
aura-cli/: Cargo.toml
aura-cli/src/: approval.rs  main.rs  session.rs
aura-core/: Cargo.toml
aura-core/src/: error.rs  hash.rs  ids.rs  lib.rs  types.rs
aura-core/src/types/: action.rs  effect.rs  identity.rs  mod.rs  process.rs  record.rs  tool.rs  transaction.rs
aura-executor/: Cargo.toml
aura-executor/src/: context.rs  lib.rs  router.rs
aura-gateway-ts/: README.md  package-lock.json  package.json
aura-gateway-ts/src/: index.ts  reasoner.ts  types.ts
aura-kernel/: Cargo.toml
aura-kernel/src/: context.rs  kernel.rs  lib.rs  policy.rs  process_manager.rs  turn_processor.rs
aura-kernel/src/process_manager/: mod.rs  monitor.rs  tests.rs  types.rs
aura-kernel/src/turn_processor/: config.rs  mod.rs  record.rs  tests.rs  tool_execution.rs
aura-node/: Cargo.toml
aura-node/src/: config.rs  lib.rs  main.rs  node.rs  protocol.rs  router.rs  scheduler.rs
aura-node/src/session/: mod.rs  ws_handler.rs
aura-reasoner/: Cargo.toml
aura-reasoner/src/: anthropic.rs  client.rs  error.rs  lib.rs  mock.rs  request.rs  retry.rs  types.rs
aura-reasoner/src/anthropic/: config.rs  mod.rs  sse.rs
aura-reasoner/src/types/: mod.rs
aura-runtime/: Cargo.toml
aura-runtime/src/: lib.rs
aura-runtime/src/turn_processor/: delegate.rs  loop_runner.rs  mod.rs  streaming.rs  tests.rs  tool_execution.rs  types.rs
aura-store/: Cargo.toml
aura-store/src/: error.rs  keys.rs  lib.rs  rocks_store.rs  store.rs
aura-swarm/: Cargo.toml
aura-swarm/src/: config.rs  lib.rs  main.rs  protocol.rs  router.rs  scheduler.rs  session.rs  swarm.rs  worker.rs
aura-swarm/src/session/: ws_handler.rs
aura-terminal/: Cargo.toml
aura-terminal/src/: app.rs  events.rs  renderer.rs  terminal.rs
aura-terminal/src/components/: code_block.rs  message.rs  mod.rs
aura-terminal/src/themes/: cyber.rs
aura-tools/: Cargo.toml
aura-tools/src/: definitions.rs  error.rs  executor.rs  external.rs  fs_tools.rs  lib.rs  registry.rs  sandbox.rs  tool.rs
aura-tools/src/domain_tools/: api.rs  mod.rs  tasks.rs
aura-tools/src/fs_tools/: cmd.rs  delete.rs  edit.rs  find.rs  ls.rs  mod.rs  read.rs  search.rs  stat.rs  write.rs
crates/aura-agent/src/: agent_runner.rs  task_executor.rs
crates/aura-agent/src/agent_loop/: mod.rs  streaming.rs  tool_execution.rs
crates/aura-automaton/: Cargo.toml
crates/aura-automaton/src/builtins/: chat.rs  dev_loop.rs  spec_gen.rs  task_run.rs
crates/aura-cli/src/: session.rs
crates/aura-core/src/: lib.rs
crates/aura-kernel/src/: policy.rs
crates/aura-node/: Cargo.toml
crates/aura-node/src/: automaton_bridge.rs  config.rs  domain.rs  jwt_domain.rs  lib.rs  node.rs  protocol.rs  router.rs  terminal.rs
crates/aura-node/src/api/: mod.rs  network.rs  orbit.rs  storage.rs  tools.rs
crates/aura-node/src/session/: mod.rs  ws_handler.rs
crates/aura-protocol/src/: lib.rs
crates/aura-reasoner/src/anthropic/: api_types.rs  config.rs  mod.rs
crates/aura-reasoner/src/types/: mod.rs
crates/aura-runtime/src/turn_processor/: config.rs
crates/aura-tools/src/: automaton_tools.rs  catalog.rs  definitions.rs  executor.rs  installed.rs  lib.rs  resolver.rs
crates/aura-tools/src/domain_tools/: api.rs  helpers.rs  mod.rs  project.rs  specs.rs  storage.rs  tasks.rs
docs/: clippy_analysis.md
specs/: spec-01-aura.md  spec-02-interactive-runtime.md  spec-03-terminal-ui.md  spec-04-stats.md
specs/v0.1.0/: spec-01-aura.md  spec-02-interactive-runtime.md  spec-03-terminal-ui.md  spec-04-stats.md  spec-05-keystore.md  spec-06-remote-machine.md
specs/v0.1.1/: aura-harness-upgrade.md
src/: event_loop.rs  main.rs  record_loader.rs
tests/: async_process_tests.rs  e2e_full.rs  e2e_live.rs  pipeline_tests.rs  proptest_tests.rs
tests/common/: mod.rs
tests/fixtures/: mod.rs
tests/integration/: full_turn.rs  multi_turn.rs  tool_execution.rs
