[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-swarm = { path = "aura-swarm" }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
resolver = "2"
members = [
    "aura-core",
    "aura-store",
    "aura-executor",
    "aura-tools",
    "aura-reasoner",
    "aura-kernel",
    "aura-swarm",
    "aura-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/aura/aura_os"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Bytes
bytes = "1.5"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "5.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
