[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-terminal = { path = "aura-terminal" }
aura-core = { path = "aura-core" }
aura-kernel = { path = "aura-kernel" }
aura-store = { path = "aura-store" }
aura-executor = { path = "aura-executor" }
aura-reasoner = { path = "aura-reasoner" }
aura-tools = { path = "aura-tools" }
aura-agent = { path = "aura-agent" }
aura-auth = { path = "aura-auth" }
aura-node = { path = "aura-node" }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rpassword = "5.0"
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15.7"
axum = { workspace = true }
tower-http = { workspace = true }

[workspace]
resolver = "2"
members = [
    "aura-core",
    "aura-store",
    "aura-executor",
    "aura-tools",
    "aura-reasoner",
    "aura-kernel",
    "aura-terminal",
    "aura-cli",
    "aura-agent",
    "aura-auth",
    "aura-automaton",
    "aura-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/aura/aura_os"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.10"
proptest = "1.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Futures
futures-util = "0.3"

# Bytes
bytes = "1.5"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "5.0"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
