[package]
name = "aura-agent-fileops"
version.workspace = true
edition.workspace = true

[dependencies]
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
