[package]
name = "aura-agent-verify"
version.workspace = true
edition.workspace = true

[dependencies]
aura-agent-fileops = { path = "../aura-agent-fileops" }
aura-reasoner = { path = "../aura-reasoner" }
anyhow = { workspace = true }
async-trait = "0.1"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
