[package]
name = "aura-cli"
description = "Interactive CLI for the Aura Swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aura-cli"
path = "src/main.rs"

[dependencies]
aura-core = { path = "../aura-core" }
aura-agent = { path = "../aura-agent" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-reasoner = { path = "../aura-reasoner" }
aura-tools = { path = "../aura-tools" }
aura-kernel = { path = "../aura-kernel" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

# CLI dependencies
rustyline = "14.0"
colored = "2.1"
uuid = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
