[package]
name = "aura-core"
description = "Core types, IDs, schemas, and serialization for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hex = "0.4"
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
