[package]
name = "aura-executor"
description = "Executor trait and router for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
futures = "0.3"

[lints]
workspace = true
