[package]
name = "aura-kernel"
description = "Deterministic kernel and turn processor for Aura Swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-reasoner = { path = "../aura-reasoner" }
aura-tools = { path = "../aura-tools" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
hex = "0.4"
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
