[package]
name = "aura-node"
description = "Node runtime for Aura - router, scheduler, workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-tools = { path = "../aura-tools" }
aura-reasoner = { path = "../aura-reasoner" }
aura-kernel = { path = "../aura-kernel" }
aura-agent = { path = "../aura-agent" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
tower_dev = { package = "tower", version = "0.5", features = ["util"] }

[lints]
workspace = true
