[package]
name = "aura-reasoner"
description = "Provider-agnostic model interface for Aura Swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"

# HTTP for direct API calls (more reliable than SDK wrappers)

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
