[package]
name = "aura-runtime"
description = "Turn processor and process manager for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-kernel = { path = "../aura-kernel" }
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-reasoner = { path = "../aura-reasoner" }
aura-tools = { path = "../aura-tools" }
anyhow = { workspace = true }
async-trait = "0.1"
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
dashmap = "6"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
