[package]
name = "aura-store"
description = "RocksDB storage implementation for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
rocksdb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
