[package]
name = "aura-swarm"
description = "Swarm runtime for Aura - router, scheduler, workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-tools = { path = "../aura-tools" }
aura-reasoner = { path = "../aura-reasoner" }
aura-kernel = { path = "../aura-kernel" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
