[package]
name = "aura-node"
description = "Node runtime for Aura - router, scheduler, workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-protocol = { path = "../aura-protocol" }
aura-store = { path = "../aura-store" }
aura-executor = { path = "../aura-executor" }
aura-tools = { path = "../aura-tools" }
aura-reasoner = { path = "../aura-reasoner" }
aura-kernel = { path = "../aura-kernel" }
aura-agent = { path = "../aura-agent" }
aura-automaton = { path = "../aura-automaton" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }
blake3 = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
uuid = { workspace = true }
futures-util = "0.3"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = { workspace = true }
tower_dev = { package = "tower", version = "0.5", features = ["util"] }

[lints]
workspace = true
